--- a/blocks/two-columns/__paragraph/two-columns__paragraph.css
+++ b/blocks/two-columns/__paragraph/two-columns__paragraph.css
@@ -2,9 +2,9 @@
     line-height: 34px;
     font-size: 24px;
     font-weight: normal;
-    margin: 0;
+    margin: 0 0 30px;
   }
   
-  .two-columns__paragraph:nth-child(-n+2) {
-    margin-bottom: 30px;
+  .two-columns__paragraph:last-child {
+    margin-bottom: 0px;
   }
